--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                         <img src="img/link.svg" alt="右向き矢印">
                         <a href="#order">お問い合わせ</a>
                     </li>
+                    <div class="btn-wrapper-pc">
+                        <form action="" method="post">
+                            <input type="submit" value="ログイン" class="button">
+                            <img src="img/login_right.svg" alt="右向き矢印">
+                        </form>
+                    </div>
                 </ul>
             </div>
             <div class="btn-wrapper">
@@ -143,7 +149,7 @@
                     </div>
                 </div>
                 <p>ペーパーレス、DXの時代。<br>
-                    デジタル名刺への移行は<br>
+                    デジタル名刺への移行は<br class="br-pc">
                     JusTouchで！</p>
             </div>
         </section>
@@ -181,7 +187,50 @@
                             <img src="img/about-icon.svg" alt="円形のアイコン">
                             <h3>こんな方におすすめ</h3>
                         </div>
-                        <p>飲食店／美容師／インフルエンサー
+                    </div>
+                    <img src="img/about1.png" alt="様々な職業のイラスト">
+                    <p>飲食店／美容師／インフルエンサー<br>
+                        営業マン／ショップ店員／接客業</p>
+                </div>
+                <div class="flex-wrapper">
+                    <div class="inner-flex-box">
+                        <div class="inner-icon">
+                            <img src="img/about-icon.svg" alt="円形のアイコン">
+                            <h3>対応機種</h3>
+                        </div>
+                    </div>
+                    <img src="img/about2.png" alt="様々な職業のスマホ">
+                    <p>ほぼすべてのスマホに対応！</p>
+                    <p class="inner-text">カバーの素材や保護フィルムの種類によっては読み取りにくい場合がございます。<br>
+                        解決方法はWebサイト内「カードが読み取れない場合」をご確認ください。</p>
+                </div>
+                <div class="flex-wrapper">
+                    <div class="inner-flex-box">
+                        <div class="inner-icon">
+                            <img src="img/about-icon.svg" alt="円形のアイコン">
+                            <h3>価格</h3>
+                        </div>
+                        <img src="img/about3.png" alt="オリジナルカードのデザイン例">
+                    </div>
+                    <div class="text-box">
+                        <p>20枚〜のご注文をいただくと<br>
+                            オリジナルデザイン制作を承ります。</p>
+                        <div class="inner-text-box">
+                            <p><span>1</span>枚
+                            ¥<span>0,000</span>税込</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-pc">
+                <h2>JusTouchについて</h2>
+                <div class="flex-wrapper">
+                    <div class="inner-flex-box">
+                        <div class="inner-icon">
+                            <img src="img/about-icon.svg" alt="円形のアイコン">
+                            <h3>こんな方におすすめ</h3>
+                        </div>
+                        <p>飲食店／美容師／インフルエンサー<br>
                             営業マン／ショップ店員／接客業</p>
                     </div>
                     <img src="img/about1.png" alt="様々な職業のイラスト">
@@ -193,7 +242,7 @@
                             <h3>対応機種</h3>
                         </div>
                         <p>ほぼすべてのスマホに対応！</p>
-                        <p class="inner-text">カバーの素材や保護フィルムの種類によっては読み取りにくい場合がございます。
+                        <p class="inner-text">カバーの素材や保護フィルムの種類によっては読み取りにくい場合がございます。<br>
                             解決方法はWebサイト内「カードが読み取れない場合」をご確認ください。</p>
                     </div>
                     <img src="img/about2.png" alt="様々な職業のスマホ">
@@ -269,7 +318,7 @@
                             <dt>郵便番号</dt>
                             <dd>
                                 <!-- ▼郵便番号入力(3桁+4桁) -->
-                                <input type="text" name="zip21" size="4" maxlength="3"> - <input type="text" name="zip22" size="5" maxlength="4" required  onKeyUp="AjaxZip3.zip2addr('zip21','zip22','addr21','addr21');">
+                                <input type="text" name="zip21" maxlength="3"> - <input type="text" name="zip22" maxlength="4" required  onKeyUp="AjaxZip3.zip2addr('zip21','zip22','addr21','addr21');">
                             </dd>
                         </dl>
                         <dl class="inner-flex-box">
@@ -282,7 +331,7 @@
                         <dl class="inner-flex-box"required>
                             <dt>電話番号</dt>
                             <dd>
-                                <input type="tel" name="phone" size="1"required> - <input type="tel" name="phone" size="2"required> - <input type="tel" name="phone" size="2"required>
+                                <input type="tel" name="phone" required> - <input type="tel" name="phone" required> - <input type="tel" name="phone" required>
                             </dd>
                         </dl>
                         <dl class="inner-flex-box" required>
