--- a/index.html
+++ b/index.html
@@ -378,43 +378,44 @@
                 <div class="shape2"></div>
                 <div class="shape3"></div>
                 <div class="shape4"></div>
-                <h2>JusTouch 4つの特徴</h2>
+                <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
+                    JusTouch 4つの特徴</span></span></h2>
                 <div class="sub-container">
                     <div class="pc-wrapper">
                         <img src="img/feature1.png" class="feature1" alt="特徴のイメージ画像1">
-                        <div class="text-box">
+                        <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
                             <h3><span class="sub-ttl">PAPERLESS</span><br>
                                 ペーパーレスで環境に優しい</h3>
                             <p>紙の名刺がなくても、伝えたい情報・連絡先が瞬時に相手のスマートフォンに共有されます。
                                 時間とともに変化した情報もマイページ内の情報を書き換えるだけで最新の情報に。
-                                この時代にスマートかつ、サスティナブルな選択を。</p>
+                                この時代にスマートかつ、サスティナブルな選択を。</p></span></span>
                         </div>
                     </div>
                     <div class="pc-wrapper2 sub">
                         <img src="img/feature2.png" class="feature2" alt="特徴のイメージ画像2">
-                        <div class="text-box">
+                        <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
                             <h3><span class="sub-ttl">JUST ONE CARD</span><br>
                                 すべてのSNSをカード1枚に</h3>
                             <p>JusTouchが1枚あれば、多くのSNS情報をほんの数秒で共有することが可能。</p>
-                            <img src="img/sns-icon.svg" class="sns-icon" alt="snsのアイコン例">
+                            <img src="img/sns-icon.svg" class="sns-icon" alt="snsのアイコン例"></span></span>
                         </div>
                     </div>
                     <div class="pc-wrapper sub">
                         <img src="img/feature3.png" class="feature3" alt="特徴のイメージ画像3">
-                        <div class="text-box">
+                        <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
                             <h3><span class="sub-ttl">MONTHLY REPORT</span><br>
                                 月1回のレポート配信</h3>
                             <p>登録した情報へのアクセス数を毎月1回レポート形式でメールでお届け。
-                                沢山の人に見てもらいたい、知ってもらいたいならJusTouchで届けましょう。</p>
+                                沢山の人に見てもらいたい、知ってもらいたいならJusTouchで届けましょう。</p></span></span>
                         </div>
                     </div>
                     <div class="pc-wrapper2">
                         <img src="img/feature4.png" class="feature4" alt="特徴のイメージ画像4">
-                        <div class="text-box">
+                        <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
                             <h3><span class="sub-ttl">DATA STORAGE</span><br>
                                 資料の保管場所として</h3>
                             <p>提案資料・会社パンフレット・商品カタログなどをPDFデータにして保管することが可能。
-                                今まで紙で持ち歩いていたものをJusTouchにアップロードすれば、スマートな印象を与えられること間違いなし！</p>
+                                今まで紙で持ち歩いていたものをJusTouchにアップロードすれば、スマートな印象を与えられること間違いなし！</p></span></span>
                         </div>
                     </div>
                 </div>
@@ -422,27 +423,34 @@
         </section>
         <section class="problem">
             <div class="container">
-                <h2>こんなお悩みありませんか</h2>
+                <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
+                    こんなお悩みありませんか</span></span></h2>
                 <div class="pc-flex">
                     <div class="flex-wrapper">
                         <h3>case01</h3>
                         <div class="inner-box">
                             <img src="img/case1.png" alt="お悩みのイメージ画像1">
-                            <p>そろそろ名刺の刷新をしたいな。自社で作ってもいいけど、今回はどこに注文しよう？</p>
+                            <p><span class="smoothText"><span class="smoothTextTrigger">
+                                そろそろ名刺の刷新をしたいな。自社で作ってもいいけど、今回はどこに注文しよう？</span></span>
+                            </p>
                         </div>
                     </div>
                     <div class="flex-wrapper">
                         <h3>case02</h3>
                         <div class="inner-box">
                             <img src="img/case2.png" alt="お悩みのイメージ画像2">
-                            <p>毎月かかる名刺 の印刷料金、バカにならねぇー！もっとコンパクトに抑えたいんだけど…。</p>
+                            <p><span class="smoothText"><span class="smoothTextTrigger">
+                                毎月かかる名刺 の印刷料金、バカにならねぇー！もっとコンパクトに抑えたいんだけど…。</span></span>
+                            </p>
                         </div>
                     </div>
                     <div class="flex-wrapper">
                         <h3>case03</h3>
                         <div class="inner-box">
                             <img src="img/case3.png" alt="お悩みのイメージ画像3">
-                            <p>名刺をお渡ししてそれっきり。新しい取引先さんにいい印象を持ってもらいたい…。</p>
+                            <p><span class="smoothText"><span class="smoothTextTrigger">
+                                名刺をお渡ししてそれっきり。新しい取引先さんにいい印象を持ってもらいたい…。</span></span>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -453,7 +461,8 @@
         </section>
         <section class="how">
             <div class="container">
-                <h2>使い方</h2>
+                <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
+                    使い方</span></span></h2>
                 <h3>簡単な情報を入力して<br>
                     すぐに登録完了！</h3>
                 <div class="flex-wrapper">
@@ -478,7 +487,8 @@
         </section>
         <section class="about">
             <div class="container">
-                <h2>JusTouchについて</h2>
+                <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
+                    JusTouchについて</span></span></h2>
                 <div class="flex-wrapper">
                     <div class="inner-flex-box">
                         <div class="inner-icon">
@@ -487,8 +497,9 @@
                         </div>
                     </div>
                     <img src="img/about1.png" alt="様々な職業のイラスト">
-                    <p>飲食店／美容師／インフルエンサー<br>
-                        営業マン／ショップ店員／接客業</p>
+                    <p><span class="smoothText"><span class="smoothTextTrigger">
+                        飲食店／美容師／インフルエンサー<br>
+                        営業マン／ショップ店員／接客業</span></span></p>
                 </div>
                 <div class="flex-wrapper">
                     <div class="inner-flex-box">
@@ -499,8 +510,9 @@
                     </div>
                     <img src="img/about2.png" alt="様々な職業のスマホ">
                     <p>ほぼすべてのスマホに対応！</p>
-                    <p class="inner-text">カバーの素材や保護フィルムの種類によっては読み取りにくい場合がございます。<br>
-                        解決方法はWebサイト内「カードが読み取れない場合」をご確認ください。</p>
+                    <p class="inner-text"><span class="smoothText"><span class="smoothTextTrigger">
+                        カバーの素材や保護フィルムの種類によっては読み取りにくい場合がございます。<br>
+                        解決方法はWebサイト内「カードが読み取れない場合」をご確認ください。</span></span></p>
                 </div>
                 <div class="flex-wrapper">
                     <div class="inner-flex-box">
@@ -508,28 +520,30 @@
                             <img src="img/about-icon.svg" alt="円形のアイコン">
                             <h3>価格</h3>
                         </div>
-                        <img src="img/about3.png" alt="オリジナルカードのデザイン例">
+                        <img src="img/about3.png" alt="オリジナルカードのデザイン例" class="card animation">
                     </div>
-                    <div class="text-box">
+                    <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
                         <p>20枚〜のご注文をいただくと<br>
                             オリジナルデザイン制作を承ります。</p>
                         <div class="inner-text-box">
                             <p><span>1</span>枚
-                            ¥<span>0,000</span>税込</p>
+                            ¥<span>0,000</span>税込</p></span></span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="container-pc">
-                <h2>JusTouchについて</h2>
+                <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
+                    JusTouchについて</span></span></h2>
                 <div class="flex-wrapper">
                     <div class="inner-flex-box">
                         <div class="inner-icon">
                             <img src="img/about-icon.svg" alt="円形のアイコン">
                             <h3>こんな方におすすめ</h3>
                         </div>
-                        <p>飲食店／美容師／インフルエンサー<br>
-                            営業マン／ショップ店員／接客業</p>
+                        <p><span class="smoothText"><span class="smoothTextTrigger">
+                            飲食店／美容師／インフルエンサー<br>
+                            営業マン／ショップ店員／接客業</span></span></p>
                     </div>
                     <img src="img/about1.png" alt="様々な職業のイラスト">
                 </div>
@@ -540,8 +554,9 @@
                             <h3>対応機種</h3>
                         </div>
                         <p>ほぼすべてのスマホに対応！</p>
-                        <p class="inner-text">カバーの素材や保護フィルムの種類によっては読み取りにくい場合がございます。<br>
-                            解決方法はWebサイト内「カードが読み取れない場合」をご確認ください。</p>
+                        <p class="inner-text"><span class="smoothText"><span class="smoothTextTrigger">
+                            カバーの素材や保護フィルムの種類によっては読み取りにくい場合がございます。<br>
+                            解決方法はWebサイト内「カードが読み取れない場合」をご確認ください。</span></span></p>
                     </div>
                     <img src="img/about2.png" alt="様々な職業のスマホ">
                 </div>
@@ -551,14 +566,14 @@
                             <img src="img/about-icon.svg" alt="円形のアイコン">
                             <h3>価格</h3>
                         </div>
-                        <img src="img/about3.png" alt="オリジナルカードのデザイン例">
+                        <img src="img/about3.png" alt="オリジナルカードのデザイン例" class="card animation">
                     </div>
-                    <div class="text-box">
+                    <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
                         <p>20枚〜のご注文をいただくと<br>
                             オリジナルデザイン制作を承ります。</p>
                         <div class="inner-text-box">
                             <p><span>1</span>枚
-                            ¥<span>0,000</span>税込</p>
+                            ¥<span>0,000</span>税込</p></span></span>
                         </div>
                     </div>
                 </div>
@@ -566,7 +581,8 @@
         </section>
         <section class="order" id="order">
             <div class="container">
-                <h2>お問い合わせ・ご注文</h2>
+                <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
+                    お問い合わせ・ご注文</span></span></h2>
                 <div class="flex-wrapper">
                     <form action="" method="post">
                         <dl class="inner-flex-box" required>
@@ -655,7 +671,8 @@
         </section>
         <section class="question" id="question">
             <div class="container">
-                <h2>よくある質問</h2>
+                <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
+                    よくある質問</span></span></h2>
                 <div class="read-more">
                     <div class="txt-show">
                         <ul class="accordion-area">
@@ -837,7 +854,8 @@
         </section>
         <section class="company">
             <div class="container">
-                <h2>提供会社</h2>
+                <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
+                    提供会社</span></span></h2>
                 <p>会社の説明会社の説明会社の説明会社の説明会社の説明会社の説明会社の説明会社の説明会社の説明会社の説明</p>
                 <div class="flex-wrapper">
                         <img src="img/logo-icg.svg" alt="株式会社I.C.Gのロゴ">
