--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,7 +40,6 @@
                 </form>
             </div>
         </div>
-        <canvas id="waveCanvas"></canvas>
     </header>
     <main>
         <section class="kv">
@@ -383,7 +382,7 @@
                 <div class="sub-container">
                     <div class="pc-wrapper">
                         <img src="img/feature1.png" class="feature1" alt="特徴のイメージ画像1">
-                        <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
+                        <div class="text-box"><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                             <h3><span class="sub-ttl">PAPERLESS</span><br>
                                 ペーパーレスで環境に優しい</h3>
                             <p>紙の名刺がなくても、伝えたい情報・連絡先が瞬時に相手のスマートフォンに共有されます。
@@ -393,7 +392,7 @@
                     </div>
                     <div class="pc-wrapper2 sub">
                         <img src="img/feature2.png" class="feature2" alt="特徴のイメージ画像2">
-                        <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
+                        <div class="text-box"><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                             <h3><span class="sub-ttl">JUST ONE CARD</span><br>
                                 すべてのSNSをカード1枚に</h3>
                             <p>JusTouchが1枚あれば、多くのSNS情報をほんの数秒で共有することが可能。</p>
@@ -402,7 +401,7 @@
                     </div>
                     <div class="pc-wrapper sub">
                         <img src="img/feature3.png" class="feature3" alt="特徴のイメージ画像3">
-                        <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
+                        <div class="text-box"><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                             <h3><span class="sub-ttl">MONTHLY REPORT</span><br>
                                 月1回のレポート配信</h3>
                             <p>登録した情報へのアクセス数を毎月1回レポート形式でメールでお届け。
@@ -411,7 +410,7 @@
                     </div>
                     <div class="pc-wrapper2">
                         <img src="img/feature4.png" class="feature4" alt="特徴のイメージ画像4">
-                        <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
+                        <div class="text-box"><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                             <h3><span class="sub-ttl">DATA STORAGE</span><br>
                                 資料の保管場所として</h3>
                             <p>提案資料・会社パンフレット・商品カタログなどをPDFデータにして保管することが可能。
@@ -430,7 +429,7 @@
                         <h3>case01</h3>
                         <div class="inner-box">
                             <img src="img/case1.png" alt="お悩みのイメージ画像1">
-                            <p><span class="smoothText"><span class="smoothTextTrigger">
+                            <p><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                                 そろそろ名刺の刷新をしたいな。自社で作ってもいいけど、今回はどこに注文しよう？</span></span>
                             </p>
                         </div>
@@ -439,7 +438,7 @@
                         <h3>case02</h3>
                         <div class="inner-box">
                             <img src="img/case2.png" alt="お悩みのイメージ画像2">
-                            <p><span class="smoothText"><span class="smoothTextTrigger">
+                            <p><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                                 毎月かかる名刺 の印刷料金、バカにならねぇー！もっとコンパクトに抑えたいんだけど…。</span></span>
                             </p>
                         </div>
@@ -448,7 +447,7 @@
                         <h3>case03</h3>
                         <div class="inner-box">
                             <img src="img/case3.png" alt="お悩みのイメージ画像3">
-                            <p><span class="smoothText"><span class="smoothTextTrigger">
+                            <p><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                                 名刺をお渡ししてそれっきり。新しい取引先さんにいい印象を持ってもらいたい…。</span></span>
                             </p>
                         </div>
@@ -497,7 +496,7 @@
                         </div>
                     </div>
                     <img src="img/about1.png" alt="様々な職業のイラスト">
-                    <p><span class="smoothText"><span class="smoothTextTrigger">
+                    <p><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                         飲食店／美容師／インフルエンサー<br>
                         営業マン／ショップ店員／接客業</span></span></p>
                 </div>
@@ -510,7 +509,7 @@
                     </div>
                     <img src="img/about2.png" alt="様々な職業のスマホ">
                     <p>ほぼすべてのスマホに対応！</p>
-                    <p class="inner-text"><span class="smoothText"><span class="smoothTextTrigger">
+                    <p class="inner-text"><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                         カバーの素材や保護フィルムの種類によっては読み取りにくい場合がございます。<br>
                         解決方法はWebサイト内「カードが読み取れない場合」をご確認ください。</span></span></p>
                 </div>
@@ -522,7 +521,7 @@
                         </div>
                         <img src="img/about3.png" alt="オリジナルカードのデザイン例" class="card animation">
                     </div>
-                    <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
+                    <div class="text-box"><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                         <p>20枚〜のご注文をいただくと<br>
                             オリジナルデザイン制作を承ります。</p>
                         <div class="inner-text-box">
@@ -541,7 +540,7 @@
                             <img src="img/about-icon.svg" alt="円形のアイコン">
                             <h3>こんな方におすすめ</h3>
                         </div>
-                        <p><span class="smoothText"><span class="smoothTextTrigger">
+                        <p><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                             飲食店／美容師／インフルエンサー<br>
                             営業マン／ショップ店員／接客業</span></span></p>
                     </div>
@@ -554,7 +553,7 @@
                             <h3>対応機種</h3>
                         </div>
                         <p>ほぼすべてのスマホに対応！</p>
-                        <p class="inner-text"><span class="smoothText"><span class="smoothTextTrigger">
+                        <p class="inner-text"><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                             カバーの素材や保護フィルムの種類によっては読み取りにくい場合がございます。<br>
                             解決方法はWebサイト内「カードが読み取れない場合」をご確認ください。</span></span></p>
                     </div>
@@ -568,7 +567,7 @@
                         </div>
                         <img src="img/about3.png" alt="オリジナルカードのデザイン例" class="card animation">
                     </div>
-                    <div class="text-box"><span class="smoothText"><span class="smoothTextTrigger">
+                    <div class="text-box"><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                         <p>20枚〜のご注文をいただくと<br>
                             オリジナルデザイン制作を承ります。</p>
                         <div class="inner-text-box">
@@ -583,6 +582,8 @@
             <div class="container">
                 <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
                     お問い合わせ・ご注文</span></span></h2>
+                <p class="order-text">※全て入力必須項目です。お手数ですがご記入お願いします。<br>
+                    ※内容によりましては、ご返答にお時間をいただく場合があります。</p>
                 <div class="flex-wrapper">
                     <form action="" method="post">
                         <dl class="inner-flex-box" required>
@@ -600,19 +601,6 @@
                                     <input type="radio" id="tex_of_con3" name="type_of_con" value="見積希望">
                                     <label for="tex_of_con3" class="radio-label">見積希望</label><br>
                                 </div>
-                            </dd>
-                        </dl>
-                        <dl class="inner-flex-box">
-                            <dt>事業形態</dt>
-                            <dd>
-                                <select name="business_format"required>
-                                    <option value="選択してください" placeholder="例）選択してください">選択してください</option>
-                                    <option value="株式会社">株式会社</option>
-                                    <option value="合同会社">合同会社</option>
-                                    <option value="合名会社">合名会社</option>
-                                    <option value="合資会社">合資会社</option>
-                                    <option value="その他">その他</option>
-                                </select>
                             </dd>
                         </dl>
                         <dl class="inner-flex-box">
