--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                         <dl class="inner-flex-box" required>
                             <dt>メールアドレス</dt>
                             <dd>
-                                <input type="text" placeholder="例）just@gmail.co.jp" name="mail" required="" required >
+                                <input type="text" placeholder="例）kazast@gmail.co.jp" name="mail" required="" required >
                             </dd>
                         </dl>
                         <dl class="inner-flex-box">
