--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
                         <img src="img/link.svg" alt="右向き矢印">
                         <a href="#order">お問い合わせ</a>
                     </li>
-                    <div class="btn-wrapper-pc">
+                    <!-- <div class="btn-wrapper-pc">
                         <form action="" method="post">
                             <input type="submit" value="ログイン" class="button">
                             <img src="img/login_right.svg" alt="右向き矢印">
                         </form>
-                    </div>
+                    </div> -->
                 </ul>
             </div>
-            <div class="btn-wrapper">
+            <!-- <div class="btn-wrapper">
                 <form action="" method="post">
                     <input type="submit" value="ログイン" class="button">
                     <img src="img/login_right.svg" alt="右向き矢印">
                 </form>
-            </div>
+            </div> -->
         </div>
     </header>
     <main>
@@ -885,7 +885,7 @@
                             <dt>個人情報の取扱い</dt>
                             <dd>
                                 <input type="checkbox" name="checkbox" id="checkbox" required>
-                                <label for="checkbox"><a href="">個人情報の取扱い</a>について同意する</label>
+                                <label for="checkbox"><a href="privacy.html">個人情報の取扱い</a>について同意する</label>
                             </dd>
                         </dl>
                         <div class="submit-btn">
@@ -1116,7 +1116,7 @@
     <footer>
         <div class="container">
             <div class="flex-wrapper">
-                <a href="">個人情報保護方針</a>
+                <a href="privacy.html">個人情報保護方針</a>
                 <a href="https://www.i-c-g.info">運営会社</a>
             </div>
             <small class="copy">&copy;I.C.G CO.,LTD. all rights reserved.</small>
