--- a/privacy.html
+++ b/privacy.html
@@ -96,13 +96,19 @@
                         個人情報苦情・相談窓口責任者 石井 信光<br>
                     </li>
                 </ul>
+                <div class="back-btn">
+                    <a href="index.html">
+                        <img src="img/link.svg" alt="右向き矢印">
+                        <p>戻る</p>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
     <footer>
         <div class="container">
             <div class="flex-wrapper">
-                <a href="">個人情報保護方針</a>
+                <a href="#top">個人情報保護方針</a>
                 <a href="https://www.i-c-g.info">運営会社</a>
             </div>
             <small class="copy">&copy;I.C.G CO.,LTD. all rights reserved.</small>
