--- a/index.html
+++ b/index.html
@@ -634,7 +634,8 @@
                         <div class="text-box"><span class="slide-in downAnime"><span class="slide-in_inner downAnimeInner">
                             <h3><span class="sub-ttl">ORIGINAL DESIGN</span><br>
                                 デザインは全てオリジナル</h3>
-                            <p>カザストが1枚あれば、多くのSNS情報をほんの数秒で共有することが可能。</p>
+                            <p>テンプレートではブランドのイメージを表現しきれません。
+                                オリジナルのデザインは相手の印象に残り、関係性を深めるきっかけになります。</p>
                         </div>
                     </div>
                     <div class="pc-wrapper">
