--- a/privacy.html
+++ b/privacy.html
@@ -44,8 +44,7 @@
     <main>
         <section class="privacy">
             <div class="container">
-                <h2><span class="slide-in leftAnime"><span class="slide-in_inner leftAnimeInner">
-                    個人情報保護方針</span></span></h2>
+                <h2>個人情報保護方針</h2>
                 <ul>
                     <li>
                         <span>1.個人情報保護方針</span><br>
