--- a/--index.html
+++ b/--index.html
@@ -843,8 +843,9 @@
                 <p class="order-text">お問い合わせ内容を確認後、ご記入いただいた電話番号へ<br>
                     弊社の担当者よりご連絡いたします。どうぞお気軽にお問い合わせください。<br>
                     ※全て入力必須項目です。お手数ですがご記入お願いします。</p>
-                <div class="flex-wrapper">
-                <form method="post" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScN8BYxILU0F3P1x3TooZCYslWIhKvRiEqfhqbDQ3W_2JxdOA/formResponse"method="post" target="hidden_iframe" onsubmit="submitted=true;">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScN8BYxILU0F3P1x3TooZCYslWIhKvRiEqfhqbDQ3W_2JxdOA/viewform?embedded=true" width="100%" height="1500px" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+                <!-- <div class="flex-wrapper">
+                    <form id="contactForm" method="post" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScN8BYxILU0F3P1x3TooZCYslWIhKvRiEqfhqbDQ3W_2JxdOA/formResponse" target="to_success" onsubmit="submitted=true;">
                         <dl class="inner-flex-box">
                             <dt><label class="inner-ttl" for="company">御社名</label></dt>
                             <dd>
@@ -876,19 +877,18 @@
                             </dd>
                         </dl>
                         <dl class="privacy-box">
-                            <dt><label for="checkbox">個人情報の取扱い</label></dt>
+                            <dt><label for="check">個人情報の取扱い</label></dt>
                             <dd>
-                                <input type="checkbox" name="entry.1592514905" id="checkbox" required>
+                                <input type="checkbox" name="entry.1592514905" id="check" required>
                                 <p><a href="privacy.html">個人情報の取扱い</a>について同意する</p>
                             </dd>
                         </dl>
                         <div class="submit-btn">
-                            <!-- <input type="submit" value="送信" class="button"> -->
-                            <button type="submit" value="submit" class="button">送　信</button>
+                            <button type="submit" value="submit" class="button">送信</button>
                             <img src="img/login_right.svg" alt="右向き矢印">
                         </div>
                     </form>
-                </div>
+                </div> -->
             </div>
         </section>
         <section class="question" id="question">
@@ -1098,5 +1098,4 @@
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/main.js"></script>
 <script type="text/javascript">var submitted = false;</script>
-<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='after.html';}"></iframe>
 </html>
